// _proto/posts.proto
syntax = "proto3";

package posts;

service PostsService {
    rpc create(CreatePostInput) returns (PostResponse) {}
    rpc findOne(FindOrDeleteOnePostInput) returns (PostResponse) {}
    rpc findMany (FindManyPostInput) returns (PostListResponse) {}
    rpc deleteById(FindOrDeleteOnePostInput) returns (DeletePostResponse) {}
}

// inputs
message CreatePostInput {
    string title = 1;
    string url=2;
    string text=3;
    string userId=4;
}

message FindOrDeleteOnePostInput {
    string id = 1;
    string userId=2;
}

message FindManyPostInput {
    string userId = 1;
}


message Post {
    string id =1;
    string title=2;
    string url=3;
    string text=4;
    string userId=5;
}
// response
message PostResponse {
    bool success = 1;
    repeated string errors =2;
    Post post = 3;
}

message PostListResponse {
    bool success = 1;
    repeated Post posts=2;
    repeated string errors =3;
}

message DeletePostResponse {
    bool success = 1;
    repeated string errors = 2; 
}



